# chemgps-sqp2

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  config.h.in  configure  configure.ac
admin/: data.txt
cgpsclt/: Makefile.am  Makefile.in  cgpsclt.h  connect.c  main.c  options.c  request.c  result.c  socket.c
cgpsd/: Makefile.am  Makefile.in  cgpsd.h  client.c  main.c  options.c  server.c  signal.c  socket.c  worker.c  worker.h
cgpsstd/: Makefile.am  Makefile.in  main.c  options.c  proj.usp
docs/: Makefile  Makefile.am  Makefile.in  README.daemon  README.protocol  cgpsclt.1  cgpsd.8  cgpsstd.1
libcgpssqp/: Makefile.am  Makefile.in  cgpssqp.h  data.c  dllist.c  dllist.h  libcgpssqp.c
libcgpssqp/test/: dllist.c
nbproject/: configurations.xml  project.xml
utils/: Makefile.am  Makefile.in
utils/cgpsddos/: Makefile.am  Makefile.in  README  bind.c  cgpsddos.h  connect.c  dgram.c  dllist.h  local.c  main.c  master.c  options.c  request.c  resolve.c  signal.c  slave.c  stress.h
utils/cgpsddos/test/: dllist.c
utils/cgpsmulti/: README  cgpsmulti.sh
utils/stress/: Makefile  Makefile.am  Makefile.in  result.c  socket.c
